@@ -192,6 +192,10 @@ struct pho_xfer_target {
     int               xt_fd;      /**< FD of the source/destination. */
     struct pho_attrs  xt_attrs;   /**< User defined attributes. */
     ssize_t           xt_size;    /**< Amount of data to write. */
+    struct timeval    xt_copy_ctime;
+                                  /**< Returned ctime of the used source copy.
+                                   *   (GET and COPY)
+                                   */
     int               xt_rc;      /**< Outcome for this target's xfer. */
 };
 
