@@ -46,6 +46,7 @@ check_SCRIPTS=acceptance.test \
               test_copy_delete.test \
               test_copy_grouping.test \
               test_copy_list.test \
+              test_ctime_ordered_read.test \
               test_delete.test \
               test_drive_list.test \
               test_drive_lookup.test \
